--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class=container>
             <div class="tile-container">
 
-                <div>One</div>
-                <div>Two</div>
-                <div>Three</div>
-                <div>Four</div>
+                <div class="image image-1">One</div>
+                <div class="image image-2">Two</div>
+                <div class="image image-3">Three</div>
+                <div class="image image-4">Four</div>
               
 <!-- 
 
