--- a/index.html
+++ b/index.html
@@ -92,14 +92,15 @@
             <!-- In the space governed by the container tile-container contorls the tiles usign flex -->
                 <div class="tile-container"> 
 
-                    <a class="image image-l" href="https://kjwesthoff.github.io/run-buddy/">Latest project: Run Buddy </a>  
-                    <a class="image image-m" href="https://github.com/KJWesthoff"> More to Come...</a>  
+                    <a class="image image-l" href="https://kjwesthoff.github.io/GroupChallenge1/">Latest project: Trein </a>  
+                    <a class="image image-t" href="https://kjwesthoff.github.io/run-buddy/">Run Buddy </a>  
                     <a class="image image-1" href="https://kjwesthoff.github.io/Horiseon/">One</a>
                     <a class="image image-2" href="https://kjwesthoff.github.io/Horiseon/">Two</a>
                     <a class="image image-3" href="https://kjwesthoff.github.io/run-buddy/">Three</a>
                     <a class="image image-4" href="https://kjwesthoff.github.io/run-buddy/">Four</a>
                     <a class="image image-5" href="https://kjwesthoff.github.io/run-buddy/">Five</a> 
-                    <a class="image image-6" href="https://github.com/KJWesthoff">Six</a>
+                    <a class="image image-m" href="https://github.com/KJWesthoff"> More to Come...</a>  
+             
 
                 </div>
             </div>
