--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <!-- In the space governed by the container tile-container contorls the tiles usign flex -->
                 <div class="tile-container"> 
 
-                    <a class="image image-l" href="https://kjwesthoff.github.io/GroupChallenge1/">Latest project: Trein </a>  
+                    <a class="image image-l" href="https://damp-ocean-64357.herokuapp.com/">Latest project: Logophile </a>  
                     <a class="image image-t" href="https://kjwesthoff.github.io/run-buddy/">Run Buddy </a>  
-                    <a class="image image-1" href="https://kjwesthoff.github.io/Horiseon/">One</a>
+                    <a class="image image-1" href="https://kjwesthoff.github.io/GroupChallenge1/">Trein</a>
                     <a class="image image-2" href="https://kjwesthoff.github.io/Horiseon/">Two</a>
                     <a class="image image-3" href="https://kjwesthoff.github.io/run-buddy/">Three</a>
                     <a class="image image-4" href="https://kjwesthoff.github.io/run-buddy/">Four</a>
